--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -42,6 +42,7 @@ jar.index=${jnlp.enabled}
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.jcalendar-1.4.jar}:\
+    ${libs.JCalendar1.4.classpath}:\
     ${libs.MySQLDriver.classpath}:\
     ${libs.eclipselink.classpath}
 # Space-separated list of extra javac options
@@ -50,8 +51,8 @@ javac.deprecation=false
 javac.processorpath=\
     ${javac.classpath}:\
     ${libs.eclipselinkmodelgen.classpath}
-javac.source=1.8
-javac.target=1.8
+javac.source=1.7
+javac.target=1.7
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
